--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -1,5 +1,5 @@
 <section class="signup-form">
-  <form fxLayout="column" fxLayoutAlign="center center" #f="ngForm" (ngSubmit)="onSubmit(f)">
+  <form fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="10px" #f="ngForm" (ngSubmit)="onSubmit(f)">
     
     <mat-form-field>
       <input type="email" 
@@ -34,15 +34,16 @@
       <input 
       matInput 
       placeholder="Your birthdate" 
-      [matDatepicker]="picker"
+      [matDatepicker]="picker" [max]="maxDate" ngModel name="birthdate" required
       [max]="maxDate">
       <!-- Datepicker toggle opens the datepicker -->
       <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
       <!-- Here is the actual datepicker -->
       <mat-datepicker #picker ></mat-datepicker>
     </mat-form-field>
+    <mat-checkbox ngModel name="agree"  required color="primary">Agree to Terms and Conditions.</mat-checkbox>
 
-    <button type="submit" mat-raised-button color="primary">Submit</button>
+    <button type="submit" mat-raised-button color="primary" [disabled]="f.invalid">Submit</button>
 
   </form>
 </section>
