--- a/src/app/training/new-training/new-training.component.html
+++ b/src/app/training/new-training/new-training.component.html
@@ -1,13 +1,28 @@
 <section class="new-training" fxLayout fxLayoutAlign="center">
 
-    <mat-card fxFlex="400px">
-        <mat-card-title>
+    <mat-card fxFlex.xs="100%" fxFlex="400px">
+        <mat-card-title fxLayoutAlign="center">
           Time to start a workout
         </mat-card-title>
         <mat-card-content>
-          Select type of training
-        </mat-card-content>
-        <mat-card-actions>
+            <mat-form-field fxLayoutAlign="center">
+                <mat-select  placeholder="Next exercise">
+                  <mat-option value="crunches">
+                    Crunches
+                  </mat-option>
+                  <mat-option value="Pushups">
+                    Pushups
+                  </mat-option>
+                  <mat-option value="Pullups">
+                    Pull-ups
+                  </mat-option>
+                  <mat-option value="Situps">
+                    Situps
+                  </mat-option>
+                </mat-select>
+              </mat-form-field>
+                      </mat-card-content>
+        <mat-card-actions fxLayoutAlign="center">
           <button type="submit" mat-button>Start</button>
         </mat-card-actions>
       </mat-card>
